@@ -1,3 +1,8 @@
+2004-03-17  Marcus Brinkmann  <marcus@gnu.org>
+
+	* sysdeps/l4/pt-spin.c (_pthread_spin_lock): Implement using new
+	time period interface.
+
 2003-10-16  Johan Rydberg  <jrydberg@night.trouble.net>
 
 	Many changes throughout all files, converting L4 specific source
